chore(security): resolve code smells and configure SpotBugs exclusion filter
- Resolved SonarLint code smells (timezone specs, cognitive complexity, exception types)
- Configured spotbugs-exclude.xml to suppress boilerplate warnings and achieve a clean build baseline
- Verified successful builds with mvn clean compile spotbugs:spotbugs